# mrs_mins_core

./: .gitman.yml  README.md
ros_packages/: mins  (+3 more)
ros_packages/mrs_mins_core/: CMakeLists.txt  package.xml
ros_packages/mrs_mins_core/config/realworld/bluefox_front/: config_camera.yaml
ros_packages/mrs_mins_core/config/realworld/oak_front/: oak_mins.yaml
ros_packages/mrs_mins_core/config/realworld/pico_t265/: config_camera.yaml  config_estimator.yaml
ros_packages/mrs_mins_core/config/rosbag/bluefox_front/: config_camera.yaml
ros_packages/mrs_mins_core/config/rosbag/pico_t265/: config_camera.yaml  config_imu.yaml  config_lidar.yaml  pcl_depth_filter_config.yaml  pico_merger.yaml
ros_packages/mrs_mins_core/config/simulation/bluefox/: config_camera.yaml
ros_packages/mrs_mins_core/launch/: filter_t265.launch  oak.launch  pico_t265.launch  realworld_bluefox_front.launch  realworld_bluefox_front_outdoor.launch  realworld_oak_front.launch  rosbag_bluefox_front.launch  rosbag_core.launch  rosbag_pico_t265.launch  rviz.launch  simulation_bluefox.launch
ros_packages/mrs_mins_core/rviz/: rosbag_uav46_pico_t265.rviz
ros_packages/mrs_mins_core/tmux/realworld/bluefox_front/: tmux.sh
ros_packages/mrs_mins_core/tmux/realworld/bluefox_front/config/: mrs_uav_managers.yaml
ros_packages/mrs_mins_core/tmux/rosbag/: mins_debug.rviz  plot_juggler.xml  session.yml
ros_packages/mrs_mins_core/tmux/rosbag/bluefox_front/: session.yml
ros_packages/mrs_mins_core/tmux/simulation/: session.yml
ros_packages/mrs_mins_core/tmux/simulation/custom_configs/: custom_config.yaml
(+3 files in other folders)
