<?xml version="1.0"?>
<package format="2">

  <name>mrs_mins_core</name>
  <version>1.0.0</version>
  <description>The MRS mins core metapackage</description>

  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>
  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>

  <depend>mins</depend>
  <depend>mrs_mins_estimator_plugin</depend>
  <depend>mrs_vins_republisher</depend>
  <depend>mrs_vins_imu_filter</depend>
  <depend>imu_transformer</depend>

</package>
